--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -28,7 +28,7 @@
   <string name="weather_retrieve_location_dialog_title">Não é possível recuperar o local!</string>
   <string name="weather_retrieve_location_dialog_message">Localização geográfica de rede está desativada. Selecione um local personalizado ou habilite o local de rede</string>
   <string name="weather_retrieve_location_dialog_enable_button">Ativado</string>
-  <string name="settings_title">Configurações</string>
+  <string name="weather_settings_title">Configurações climáticas</string>
   <string name="auto_update_title">Atualizações automáticas</string>
   <string name="unit_metric">Métrico (\u00b0C)</string>
   <string name="unit_imperial">Imperial (\u00b0F)</string>
@@ -40,4 +40,10 @@
   <string name="interval_4_hour">4 horas</string>
   <string name="interval_6_hour">6 horas</string>
   <string name="interval_12_hour">12 horas</string>
+	<string name="weather_tile_title">Clima</string>
+	<string name="weather_icon_pack_title">Pacote de ícones de condições climáticas</string>
+	<string name="weather_icon_pack_playstore">Procurar pacotes de ícones</string>
+	<string name="service_disabled">Desabilitado</string>
+	<string name="service_error">Erro</string>
+	<string name="last_update_time">Última atualização</string>
 </resources>
