--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -40,4 +40,10 @@
   <string name="interval_4_hour">4 ore</string>
   <string name="interval_6_hour">6 ore</string>
   <string name="interval_12_hour">12 ore</string>
+  <string name="weather_tile_title">Meteo</string>
+	<string name="weather_icon_pack_title">Icon pack meteo</string>
+	<string name="weather_icon_pack_playstore">Trova icon packs</string>
+	<string name="service_disabled">Disabilitato</string>
+	<string name="service_error">Errore</string>
+	<string name="last_update_time">Ora ultimo aggiornamento</string>
 </resources>
