--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -22,22 +22,28 @@
   <string name="weather_progress_title">Comprobando ubicación</string>
   <string name="weather_select_location">Selecciona ubicación</string>
   <string name="custom_location_title">Ubicación personalizada</string>
-  <string name="weather_custom_location_dialog_title">Introduce ubicación</string>
+  <string name="weather_custom_location_dialog_title">Introducir ubicación</string>
   <string name="weather_custom_location_title">Ubicación</string>
   <string name="weather_custom_location_missing">Ubicación personalizada</string>
   <string name="weather_retrieve_location_dialog_title">No se ha podido obtener la ubicación</string>
-  <string name="weather_retrieve_location_dialog_message">Geolocalización de la red está inhabilitado.\n\n Fijar una ubicación personalizada o habilitar la ubicación de red</string>
-  <string name="weather_retrieve_location_dialog_enable_button">Habilitar</string>
-  <string name="settings_title">Ajustes</string>
+  <string name="weather_retrieve_location_dialog_message">Geolocalización de la red está desactivado.\n\n Fijar una ubicación personalizada o activa la ubicación de red</string>
+  <string name="weather_retrieve_location_dialog_enable_button">Activar</string>
+  <string name="weather_settings_title">Ajustes del tiempo</string>
   <string name="auto_update_title">Actualizaciones automáticas</string>
   <string name="unit_metric">Métrico (\u00b0C)</string>
   <string name="unit_imperial">Imperial (\u00b0F)</string>
   <string name="update">Actualizar</string>
-  <string name="enable_title">Habilitar</string>
+  <string name="enable_title">Activar</string>
   <string name="update_interval_title">Intervalo de actualización</string>
   <string name="interval_1_hour">1 hora</string>
   <string name="interval_2_hour">2 horas</string>
   <string name="interval_4_hour">4 horas</string>
   <string name="interval_6_hour">6 horas</string>
   <string name="interval_12_hour">12 horas</string>
+  <string name="weather_tile_title">Tiempo metereológico</string>
+	<string name="weather_icon_pack_title">Pack de iconos Condition</string>
+	<string name="weather_icon_pack_playstore">Obtener pack de iconos</string>
+	<string name="service_disabled">Tiempo desactivado</string>
+	<string name="service_error">Error</string>
+	<string name="last_update_time">Última actualización</string>
 </resources>
