--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -19,19 +19,19 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string name="provider_title">Provider Meteo</string>
   <string name="units_title">Unità</string>
-  <string name="weather_progress_title">Verifica della posizione</string>
-  <string name="weather_select_location">Seleziona località</string>
-  <string name="custom_location_title">Località personalizzata</string>
-  <string name="weather_custom_location_dialog_title">Inserisci località</string>
-  <string name="weather_custom_location_title">Località</string>
-  <string name="weather_custom_location_missing">Imposta posizione personalizzata</string>
+  <string name="weather_progress_title">Verifica posizione</string>
+  <string name="weather_select_location">Seleziona posizione</string>
+  <string name="custom_location_title">Posizione personalizzata</string>
+  <string name="weather_custom_location_dialog_title">Inserisci posizione</string>
+  <string name="weather_custom_location_title">Posizione</string>
+  <string name="weather_custom_location_missing">Imposta la posizione personalizzata</string>
   <string name="weather_retrieve_location_dialog_title">Non è possibile recuperare la posizione!</string>
-  <string name="weather_retrieve_location_dialog_message">La geolocalizzazione è disabilitata. \n\nInserisci una località personalizzata o attiva la geolocalizzazione</string>
+  <string name="weather_retrieve_location_dialog_message">La geolocalizzazione è disabilitata. \n\nInserisci una posizione personalizzata o attiva la geolocalizzazione</string>
   <string name="weather_retrieve_location_dialog_enable_button">Abilita</string>
-  <string name="settings_title">Impostazioni</string>
+  <string name="weather_settings_title">Impostazioni meteo</string>
   <string name="auto_update_title">Aggiornamenti automatici</string>
-  <string name="unit_metric">Metrica (\u00b0C)</string>
-  <string name="unit_imperial">Imperiale (\u00b0F)</string>
+  <string name="unit_metric">Celsius (\u00b0C)</string>
+  <string name="unit_imperial">Fahrenheit (\u00b0F)</string>
   <string name="update">Aggiorna</string>
   <string name="enable_title">Abilita</string>
   <string name="update_interval_title">Intervallo di aggiornamento</string>
@@ -41,9 +41,9 @@
   <string name="interval_6_hour">6 ore</string>
   <string name="interval_12_hour">12 ore</string>
   <string name="weather_tile_title">Meteo</string>
-	<string name="weather_icon_pack_title">Icon pack meteo</string>
-	<string name="weather_icon_pack_playstore">Trova icon packs</string>
-	<string name="service_disabled">Disabilitato</string>
-	<string name="service_error">Errore</string>
-	<string name="last_update_time">Ora ultimo aggiornamento</string>
+  <string name="weather_icon_pack_title">Pacchetto icone meteo</string>
+  <string name="weather_icon_pack_playstore">Trova pacchetto icone</string>
+  <string name="service_disabled">Disabilitato</string>
+  <string name="service_error">Errore</string>
+  <string name="last_update_time">Ora ultimo aggiornamento</string>
 </resources>
