--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -28,7 +28,7 @@
   <string name="weather_retrieve_location_dialog_title">无法确定位置!</string>
   <string name="weather_retrieve_location_dialog_message">网络定位未启用.\n\n请设置自定义位置或启用网络定位</string>
   <string name="weather_retrieve_location_dialog_enable_button">启用</string>
-  <string name="settings_title">设置</string>
+  <string name="weather_settings_title">天气设置</string>
   <string name="auto_update_title">自动更新</string>
   <string name="unit_metric">公制 - (\u00b0F)</string>
   <string name="unit_imperial">英制 - (\u00b0F)</string>
@@ -40,4 +40,10 @@
   <string name="interval_4_hour">4 小时</string>
   <string name="interval_6_hour">6 小时</string>
   <string name="interval_12_hour">12 小时</string>
+  <string name="weather_tile_title">天气</string>
+  <string name="weather_icon_pack_title">天气图标包</string>
+  <string name="weather_icon_pack_playstore">下载图标包</string>
+  <string name="service_disabled">禁用</string>
+  <string name="service_error">错误</string>
+  <string name="last_update_time">上次更新时间</string>
 </resources>
