--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,6 @@
     <string name="weather_47">Isolated Thundershowers</string>
     <!-- Forecast unavailable -->
     <string name="weather_3200" translatable="false"></string>
+
+    <string name="omnijaws_service_error_marker" translatable="false">*</string>
 </resources>
