--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -17,7 +17,7 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-  <string name="provider_title">Provider Meteo</string>
+  <string name="provider_title">Provider meteo</string>
   <string name="units_title">Unità</string>
   <string name="weather_progress_title">Verifica posizione</string>
   <string name="weather_select_location">Seleziona posizione</string>
@@ -41,7 +41,7 @@
   <string name="interval_6_hour">6 ore</string>
   <string name="interval_12_hour">12 ore</string>
   <string name="weather_tile_title">Meteo</string>
-  <string name="weather_icon_pack_title">Pack icone condizioni</string>
+  <string name="weather_icon_pack_title">Pacchetto icone meteo</string>
   <string name="weather_icon_pack_playstore">Scegli pacchetto icone</string>
   <string name="service_disabled">Disabilitato</string>
   <string name="service_error">Errore</string>
@@ -54,8 +54,8 @@
     <string name="omnijaws_service_disabled">Servizio disabilitato</string>
     <string name="weather_widget">Meteo</string>
     <string name="omnijaws_current_text">Adesso</string>
-    <string name="show_background_title">Ombra sfondo</string>
-    <string name="weather_config_title">Impostazioni del servizio</string>
+    <string name="show_background_title">Ombra dello sfondo</string>
+    <string name="weather_config_title">Impostazioni del servizio meteo</string>
     <string name="weather_config_summary"></string>
     <!-- Weather - Speed units -->
     <string name="weather_kph">kph</string>
